// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: cursor-1.js format 1`] = `
====================================options=====================================
cursorOffset: 27
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
﻿(function(){return        <|>15})()

=====================================output=====================================
﻿(function () {
  return <|>15;
})();

================================================================================
`;

exports[`snippet: cursor-and-range.js format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 22
    : parsers: ["babel"]
    : rangeEnd: 27
    : rangeStart: 11
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | ﻿
  2 |
> 3 | class    a {
    |         ^^^^
> 4 |   b(  <|> ) {}
    | ^^^^^^^^^^^^^^
  5 | }
  6 |
  7 | let    x
    : =====================================output=====================================
    : ﻿
    :
    : class a {
    :   b(<|>) {}
    : }
    :
    : let    x
    : ================================================================================
`;

exports[`snippet: range-1.js format 1`] = `
    : ====================================options=====================================
    : parsers: ["babel"]
    : rangeEnd: 27
    : rangeStart: 11
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | ﻿
  2 |
> 3 | class    a {
    |         ^^^^
> 4 |   b(   ) {}
    | ^^^^^^^^^^^
  5 | }
  6 |
  7 | let    x
  8 |
    : =====================================output=====================================
    : ﻿
    :
    : class a {
    :   b() {}
    : }
    :
    : let    x
    :
    : ================================================================================
`;

exports[`snippet: range-and-cursor-1.js format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 23
    : parsers: ["babel"]
    : rangeEnd: 28
    : rangeStart: 12
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | ﻿
  2 |
  3 |
> 4 | class    a {
    |         ^^^^
> 5 |   b(  <|> ) {}
    | ^^^^^^^^^^^^^^
  6 | }
  7 |
  8 | let    x 
  9 |
    : =====================================output=====================================
    : ﻿
    :
    :
    : class a {
    :   b(<|>) {}
    : }
    :
    : let    x 
    :
    : ================================================================================
`;
